[gd_scene load_steps=6 format=3 uid="uid://b61sflb01o3sw"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_gdhv3"]
[ext_resource type="Texture2D" uid="uid://daa0h1fofa7wy" path="res://graphics/player/player.png" id="1_ogo8s"]
[ext_resource type="Texture2D" uid="uid://c06mn1gp77go5" path="res://graphics/decals/white.png" id="3_lrj2p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s3mnu"]
radius = 65.7343

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wbinu"]
particle_flag_disable_z = true
spread = 15.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 750.0
initial_velocity_max = 1000.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5

[node name="player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_gdhv3")

[node name="playerImage" type="Sprite2D" parent="."]
position = Vector2(37, 38)
rotation = 1.5708
texture = ExtResource("1_ogo8s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 35)
shape = SubResource("CircleShape2D_s3mnu")

[node name="laserTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="grenadeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(126, 49)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(126, 73)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(134, 59)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(132, 57)
emitting = false
process_material = SubResource("ParticleProcessMaterial_wbinu")
texture = ExtResource("3_lrj2p")
lifetime = 0.2
one_shot = true

[connection signal="timeout" from="laserTimer" to="." method="_on_laserTimer_timeout"]
[connection signal="timeout" from="grenadeTimer" to="." method="_on_grenade_timer_timeout"]
